--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-native": "0.70.5",
     "react-native-drop-shadow": "^0.0.6",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-maps": "1.3.2",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-shadow-2": "^7.0.6",
     "react-native-svg": "13.4.0",
+    "react-native-webview": "11.23.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
