--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~47.0.6",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-drop-shadow": "^0.0.6",
