--- a/package.json
+++ b/package.json
@@ -13,25 +13,27 @@
     "@expo-google-fonts/lato": "^0.2.2",
     "@expo-google-fonts/oswald": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-firebase/app": "^17.4.0",
+    "@react-native-firebase/firestore": "^17.4.0",
     "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/stack": "^6.3.7",
     "camelize": "^1.0.1",
-    "expo": "~47.0.6",
-    "expo-font": "~11.0.1",
-    "expo-status-bar": "~1.4.2",
-    "firebase": "^9.15.0",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
+    "expo": "^48.0.0",
+    "expo-font": "~11.1.1",
+    "expo-status-bar": "~1.4.4",
+    "firebase": "9.6.7",
+    "react": "18.2.0",
+    "react-native": "0.71.4",
     "react-native-drop-shadow": "^0.0.6",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-paper": "^4.12.5",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-shadow-2": "^7.0.6",
     "react-native-svg": "13.4.0",
-    "react-native-webview": "11.23.1",
+    "react-native-webview": "11.26.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
