--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.2",
     "@expo-google-fonts/oswald": "^0.2.2",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-firebase/app": "^17.4.0",
     "@react-native-firebase/firestore": "^17.4.0",
     "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/stack": "^6.3.7",
+    "axios": "^1.4.0",
     "camelize": "^1.0.1",
     "expo": "^48.0.0",
     "expo-font": "~11.1.1",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "9.6.7",
+    "immer": "^10.0.1",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-drop-shadow": "^0.0.6",
@@ -34,7 +38,13 @@
     "react-native-shadow-2": "^7.0.6",
     "react-native-svg": "13.4.0",
     "react-native-webview": "11.26.0",
-    "styled-components": "^5.3.6"
+    "react-redux": "^8.0.5",
+    "reactotron-react-native": "^5.0.3",
+    "reactotron-redux": "^3.1.3",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3",
+    "styled-components": "^5.3.6",
+    "underscore": "^1.13.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
