--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-font": "~11.1.1",
     "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "firebase": "9.6.7",
     "immer": "^10.0.1",
     "moment": "^2.29.4",
@@ -36,6 +37,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-shadow-2": "^7.0.6",
+    "react-native-simple-modal": "^9.0.1",
     "react-native-svg": "13.4.0",
     "react-native-webview": "11.26.0",
     "react-redux": "^8.0.5",
